--- a/jhjw.html
+++ b/jhjw.html
@@ -14,7 +14,7 @@
         .dbj {
             width: 100%;
             height: 360px;
-            background-image: url();
+            background-image: url(./images/two/top.jpg);
             background-color: blue;
         }
 
@@ -158,6 +158,188 @@
         <a href="">活动</a>
     </div>
     <!-- 公告 -->
+    <div class="box">
+        <div class="box2">
+            <a href="">
+                <span>公告</span>
+                <p class="p1">04-22 2020年04月23日例行维护公告</p>
+                <p class="p2">
+                    花儿与少年郎：咫尺画堂深似海，忆来惟把旧书看，几时携手入长安？为构筑更美好的江湖，《网易武魂：花与剑》手游（以下简称"花与剑"）将于04月23日上午8:00-9:00例行停机维护。
+                </p>
+
+            </a>
+        </div>
+    </div>
+
+    <div class="box">
+        <div class="box2">
+            <a href="">
+                <span>公告</span>
+                <p class="p1">04-22 2020年04月23日例行维护公告</p>
+                <p class="p2">
+                    花儿与少年郎：咫尺画堂深似海，忆来惟把旧书看，几时携手入长安？为构筑更美好的江湖，《网易武魂：花与剑》手游（以下简称"花与剑"）将于04月23日上午8:00-9:00例行停机维护。
+                </p>
+
+            </a>
+        </div>
+    </div>
+
+    <div class="box">
+        <div class="box2">
+            <a href="">
+                <span>公告</span>
+                <p class="p1">04-22 2020年04月23日例行维护公告</p>
+                <p class="p2">
+                    花儿与少年郎：咫尺画堂深似海，忆来惟把旧书看，几时携手入长安？为构筑更美好的江湖，《网易武魂：花与剑》手游（以下简称"花与剑"）将于04月23日上午8:00-9:00例行停机维护。
+                </p>
+
+            </a>
+        </div>
+    </div>
+
+    <div class="box">
+        <div class="box2">
+            <a href="">
+                <span>公告</span>
+                <p class="p1">04-22 2020年04月23日例行维护公告</p>
+                <p class="p2">
+                    花儿与少年郎：咫尺画堂深似海，忆来惟把旧书看，几时携手入长安？为构筑更美好的江湖，《网易武魂：花与剑》手游（以下简称"花与剑"）将于04月23日上午8:00-9:00例行停机维护。
+                </p>
+
+            </a>
+        </div>
+    </div>
+
+    <div class="box">
+        <div class="box2">
+            <a href="">
+                <span>公告</span>
+                <p class="p1">04-22 2020年04月23日例行维护公告</p>
+                <p class="p2">
+                    花儿与少年郎：咫尺画堂深似海，忆来惟把旧书看，几时携手入长安？为构筑更美好的江湖，《网易武魂：花与剑》手游（以下简称"花与剑"）将于04月23日上午8:00-9:00例行停机维护。
+                </p>
+
+            </a>
+        </div>
+    </div>
+
+    <div class="box">
+        <div class="box2">
+            <a href="">
+                <span>公告</span>
+                <p class="p1">04-22 2020年04月23日例行维护公告</p>
+                <p class="p2">
+                    花儿与少年郎：咫尺画堂深似海，忆来惟把旧书看，几时携手入长安？为构筑更美好的江湖，《网易武魂：花与剑》手游（以下简称"花与剑"）将于04月23日上午8:00-9:00例行停机维护。
+                </p>
+
+            </a>
+        </div>
+    </div>
+
+    <div class="box">
+        <div class="box2">
+            <a href="">
+                <span>公告</span>
+                <p class="p1">04-22 2020年04月23日例行维护公告</p>
+                <p class="p2">
+                    花儿与少年郎：咫尺画堂深似海，忆来惟把旧书看，几时携手入长安？为构筑更美好的江湖，《网易武魂：花与剑》手游（以下简称"花与剑"）将于04月23日上午8:00-9:00例行停机维护。
+                </p>
+
+            </a>
+        </div>
+    </div>
+
+    <div class="box">
+        <div class="box2">
+            <a href="">
+                <span>公告</span>
+                <p class="p1">04-22 2020年04月23日例行维护公告</p>
+                <p class="p2">
+                    花儿与少年郎：咫尺画堂深似海，忆来惟把旧书看，几时携手入长安？为构筑更美好的江湖，《网易武魂：花与剑》手游（以下简称"花与剑"）将于04月23日上午8:00-9:00例行停机维护。
+                </p>
+
+            </a>
+        </div>
+    </div>
+
+    <div class="box">
+        <div class="box2">
+            <a href="">
+                <span>公告</span>
+                <p class="p1">04-22 2020年04月23日例行维护公告</p>
+                <p class="p2">
+                    花儿与少年郎：咫尺画堂深似海，忆来惟把旧书看，几时携手入长安？为构筑更美好的江湖，《网易武魂：花与剑》手游（以下简称"花与剑"）将于04月23日上午8:00-9:00例行停机维护。
+                </p>
+
+            </a>
+        </div>
+    </div>
+
+    <div class="box">
+        <div class="box2">
+            <a href="">
+                <span>公告</span>
+                <p class="p1">04-22 2020年04月23日例行维护公告</p>
+                <p class="p2">
+                    花儿与少年郎：咫尺画堂深似海，忆来惟把旧书看，几时携手入长安？为构筑更美好的江湖，《网易武魂：花与剑》手游（以下简称"花与剑"）将于04月23日上午8:00-9:00例行停机维护。
+                </p>
+
+            </a>
+        </div>
+    </div>
+
+    <div class="box">
+        <div class="box2">
+            <a href="">
+                <span>公告</span>
+                <p class="p1">04-22 2020年04月23日例行维护公告</p>
+                <p class="p2">
+                    花儿与少年郎：咫尺画堂深似海，忆来惟把旧书看，几时携手入长安？为构筑更美好的江湖，《网易武魂：花与剑》手游（以下简称"花与剑"）将于04月23日上午8:00-9:00例行停机维护。
+                </p>
+
+            </a>
+        </div>
+    </div>
+
+    <div class="box">
+        <div class="box2">
+            <a href="">
+                <span>公告</span>
+                <p class="p1">04-22 2020年04月23日例行维护公告</p>
+                <p class="p2">
+                    花儿与少年郎：咫尺画堂深似海，忆来惟把旧书看，几时携手入长安？为构筑更美好的江湖，《网易武魂：花与剑》手游（以下简称"花与剑"）将于04月23日上午8:00-9:00例行停机维护。
+                </p>
+
+            </a>
+        </div>
+    </div>
+
+    <div class="box">
+        <div class="box2">
+            <a href="">
+                <span>公告</span>
+                <p class="p1">04-22 2020年04月23日例行维护公告</p>
+                <p class="p2">
+                    花儿与少年郎：咫尺画堂深似海，忆来惟把旧书看，几时携手入长安？为构筑更美好的江湖，《网易武魂：花与剑》手游（以下简称"花与剑"）将于04月23日上午8:00-9:00例行停机维护。
+                </p>
+
+            </a>
+        </div>
+    </div>
+
+    <div class="box">
+        <div class="box2">
+            <a href="">
+                <span>公告</span>
+                <p class="p1">04-22 2020年04月23日例行维护公告</p>
+                <p class="p2">
+                    花儿与少年郎：咫尺画堂深似海，忆来惟把旧书看，几时携手入长安？为构筑更美好的江湖，《网易武魂：花与剑》手游（以下简称"花与剑"）将于04月23日上午8:00-9:00例行停机维护。
+                </p>
+
+            </a>
+        </div>
+    </div>
+
     <div class="box">
         <div class="box2">
             <a href="">
