--- a/jhjw.html
+++ b/jhjw.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
+    <link rel="stylesheet" href="./css/jhjw.css">
+    <!-- <style>
         * {
             margin: 0;
             padding: 0;
@@ -136,7 +137,7 @@
             word-break: break-all;
             transition: color ease-in-out .3s;
         }
-    </style>
+    </style> -->
 </head>
 
 <body>
