--- a/hezuo.html
+++ b/hezuo.html
@@ -4,8 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>商务合作</title>
     <style>
+        /* body {
+            background-color: #f0f0f0;
+        }
+        img {
+            width: 865px;
+            height: 865px;
+            margin-left: 490px;
+        } */
+        /* 头部 */
         * {
             margin: 0;
             padding: 0;
@@ -15,6 +24,7 @@
             text-align: center;
             height: 60px;
             overflow: hidden;
+            background-color: #fff;
         }
 
         nav img {
@@ -55,103 +65,7 @@
         }
 
 
-        /* 大背景 */
-        .dbj {
-            padding-top: 500px;
-            height: 1078px;
-            background: url(././images/wyds/01.jpg) top no-repeat;
-            background-size: auto;
-        }
-
-        .dbj .xz {
-            height: 113px;
-            /* background-color: aquamarine; */
-        }
-
-        .dbj .ers {
-            position: relative;
-        }
-
-        .dbj .xz .a1 {
-            position: absolute;
-            top: 0;
-            left: 50%;
-            background-image: url(./images/wyds/xz.png);
-
-            width: 139px;
-            height: 55px;
-            display: inline-block;
-            background-position: 312px -443px;
-        }
-
-        .a1:hover {
-            /* background-position: 312px 121px;
-        background-position: 312px -384px; */
-        }
-
-        .dbj .xz .a2 {
-            position: absolute;
-            top: 58px;
-            left: 50%;
-            background-image: url(./images/wyds/xz.png);
-            background-position: 140px -110px;
-            width: 139px;
-            height: 55px;
-            display: inline-block;
-        }
-
-        .a2:hover {
-            background-position: 143 0;
-        }
-
-
-        .two {
-            margin-top: 1250px;
-            content: "";
-            width: 100%;
-            height: 1155px;
-            position: absolute;
-            top: -107px;
-            background: url(https://g.166.net/static/business/ds/img/1cddd61.png) top no-repeat;
-            background-size: auto 100%;
-            pointer-events: none;
-        }
-
-
-
-
-
-
-
-
-
-
-
-
-        .san {
-            margin-top: 660px;
-            height: 1333px;
-            padding-top: 120px;
-            background: url(https://g.166.net/static/business/ds/img/3205f85.jpg) top no-repeat;
-            background-size: auto 100%;
-        }
-
-        .si {
-            height: 1081px;
-            padding-top: 103px;
-            background: url(https://g.166.net/static/business/ds/img/941c6c5.jpg) top no-repeat;
-            background-size: auto 100%;
-        }
-
-        .wu {
-            height: 1080px;
-            padding-top: 107px;
-            background: url(https://g.166.net/static/business/ds/img/475d6b8.jpg) top no-repeat;
-            background-size: auto 100%;
-        }
-
-
-
+        /* 底部 */
         .dao-er {
             position: relative;
             margin: auto;
@@ -332,14 +246,25 @@
             color: #fff;
         }
 
-        .di-bu .box .bottom a{
+        .di-bu .box .bottom a {
             text-decoration: none;
             color: #fff;
+        }
+
+        .aaa {
+            margin-left: 476px;
+            width: 960px;
+            height: 1031px;
+            margin-top: 30px;
+            margin-bottom: 30px;
+            border: 1px solid #fff;
+            border-radius: 30px;
         }
     </style>
 </head>
 
-<body>
+<body style="background-color: #f5f5f5;">
+    <!-- 头部 -->
     <nav>
         <img src="./images/wyds/logo.png" alt="">
         <a href="" class="aa">首页</a>
@@ -354,48 +279,12 @@
         </a>
     </nav>
 
-    <div class="dbj">
-        <section class="ers">
-            <div class="xz">
-                <a href="" class="a1"></a>
-                <a href="" class="a2"></a>
-            </div>
-        </section>
-    </div>
+
+    <img src="./images/hezuo/hzpng.png" alt="" class="aaa">
 
 
 
-
-    <!-- 第二大框 -->
-    <div class="two"></div>
-
-
-
-
-
-
-
-
-
-    <!-- 第三块 -->
-    <div class="san"></div>
-
-
-
-    <!-- 第四 -->
-    <div class="si">
-
-    </div>
-
-
-
-    <!-- 第五 -->
-    <div class="wu">
-
-    </div>
-
-
-
+    <!-- 尾部 -->
     <div class="dao-er">
         <div class="daoer">
             <div class="left">
@@ -455,8 +344,5 @@
         </div>
     </div>
 </body>
-
-
-
 
 </html>
