--- a/hezuo.html
+++ b/hezuo.html
@@ -252,7 +252,7 @@
         }
 
         .aaa {
-            margin-left: 476px;
+            margin-left: calc(50% - 440px);
             width: 960px;
             height: 1031px;
             margin-top: 30px;
