--- a/jhjw.html
+++ b/jhjw.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>江湖见闻</title>
     <link rel="stylesheet" href="./css/jhjw.css">
     <!-- <style>
         * {
@@ -353,6 +353,9 @@
             </a>
         </div>
     </div>
+    <a href="#" id="tops"></a>
+    <script src="./lib/jquery-1.12.4.js"></script>
+    <script src="./js/jhjw.js"></script>
 </body>
 
 </html>
