--- a/dszm.html
+++ b/dszm.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>大神招募</title>
+    <link rel="stylesheet" href="./css/reset.css">
     <style>
         * {
             margin: 0;
@@ -25,29 +26,30 @@
             height: 44px;
             margin: 0 auto 52px;
         }
-        .box-1 .bj{
+
+        .box-1 .bj {
             max-width: 1424px;
-    padding: 54px 0 40px;
-    margin: auto;
-    font-size: 0;
-    background: url(https://g.166.net/static/business/ds/img/2377dc4.jpg) top no-repeat;
-    background-size: contain;
-    height: 490px;
+            padding: 54px 0 40px;
+            margin: auto;
+            font-size: 0;
+            background: url(https://g.166.net/static/business/ds/img/2377dc4.jpg) top no-repeat;
+            background-size: contain;
+            height: 490px;
         }
 
-        .box-2{
+        .box-2 {
             height: 963px;
-    padding-top: 105px;
-    background: #f6f6f6 url(https://g.166.net/static/business/ds/img/be074bd.jpg) center 100px no-repeat;
-    background-size: 1605px 850px;
+            padding-top: 105px;
+            background: #f6f6f6 url(https://g.166.net/static/business/ds/img/be074bd.jpg) center 100px no-repeat;
+            background-size: 1605px 850px;
         }
 
-        .box-2 h2{
+        .box-2 h2 {
             background-image: url(https://g.166.net/static/business/ds/img/00373ef.png);
-    background-position: -545px -88px;
-    width: 334px;
-    height: 43px;
-    margin: 0 auto 45px;
+            background-position: -545px -88px;
+            width: 334px;
+            height: 43px;
+            margin: 0 auto 45px;
         }
     </style>
 </head>
