--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
              <p>官网首页</p>
              <span>HOME</span>
         </a>
-        <a href="news/index.html" title="江湖见闻" target="_blank">
+        <a href="jhjw.html" title="江湖见闻" target="_blank">
             <p>江湖见闻</p>
             <span>NEWS</span>
         </a>
-        <a href="feature.html" title="花剑特色" target="_blank">
+        <a href="hjts.html" title="花剑特色" target="_blank">
             <p>花剑特色</p>
             <span>FEATURE</span>
         </a>
@@ -87,11 +87,11 @@
             <p>情缘主角</p>
             <span>MALE OWNER</span>
         </a>
-        <a href="feature.html?page=2" title="五大门派" target="_blank">
+        <a href="wdmp.html?page=2" title="五大门派" target="_blank">
             <p>五大门派</p>
             <span>SECT</span>
         </a>
-        <a href="feature.html?page=1" title="声色映像" target="_blank">
+        <a href="ssyx.html?page=1" title="声色映像" target="_blank">
             <p>声色映像</p>
             <span>VIDEO</span>
         </a>
@@ -99,7 +99,7 @@
             <p>论坛</p>
             <span>BBS</span>
         </a> -->
-        <a href="" title="网易大神" target="_blank">
+        <a href="./wyds.html" title="网易大神" target="_blank">
             <p>网易大神</p>
             <span>大神</span>
         </a>
@@ -135,7 +135,7 @@
                 </div>
             </div>
         </a> -->
-        <a href="" class="noLine" title="同人社区" target="_blank">
+        <a href="####" class="noLine" title="同人社区" target="_blank">
             <p>同人社区</p>
             <span>community</span>
         </a>
