--- a/qyzj.html
+++ b/qyzj.html
@@ -8,7 +8,7 @@
 
 <!--This is Git Project From HYJ/hyj-gw-pc-32830-20190806(12727)-->
     <title>
-        声色映像
+        情缘主角
     </title>
 	<meta name="from" content="git:HYJ/hyj-gw-pc-32830-20190806">
 	<meta name="author" content="网易，NetEase Inc.">
