--- a/wyds.html
+++ b/wyds.html
@@ -344,9 +344,9 @@
         <img src="./images/wyds/logo.png" alt="">
         <a href="" class="aa">首页</a>
         <a href="">内容精选</a>
-        <a href="">大神招募</a>
-        <a href="">最新资讯</a>
-        <a href="">商务合作</a>
+        <a href="dszm.html">大神招募</a>
+        <a href="./qbzx.html">最新资讯</a>
+        <a href="./hezuo.html">商务合作</a>
         <a href="">关注我们
             <section>
 
