--- a/163.html
+++ b/163.html
@@ -57,7 +57,7 @@
         <!--通用侧栏-->
         <div class="gm-top-bar">
     <img class="top-bar-bg" src="images/top-bar_bg_496776f.png" alt="bg">
-    <a class="gw-btn" href="//hyj.163.com/index.html" title="进入官网" target="_blank">进入官网</a>
+    <a class="gw-btn" href="index.html" title="进入官网" target="_blank">进入官网</a>
     
     <span class="sm weixin">
         <i></i>
