--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <!--This is Git Project From HYJ/hyj-gw-pc-32830-20190806(12727)-->
     <title>花与剑手游官网-网易古风言情手游“花与剑”今日全平台公测！</title>
+    <link rel="shortcut icon" href="96.ico"/>
 	<meta name="from" content="git:HYJ/hyj-gw-pc-32830-20190806">
 	<meta name="author" content="网易，NetEase Inc.">
 	<meta name="copyright" content="网易，NetEase Inc.">
