--- a/ssyx.html
+++ b/ssyx.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     
-
+    <link rel="shortcut icon" href="./96.ico"/>
 
 <!--This is Git Project From HYJ/hyj-gw-pc-32830-20190806(12727)-->
     <title>
