--- a/163.html
+++ b/163.html
@@ -16,6 +16,7 @@
     <meta name="renderer" content="webkit|ie-comp|ie-stand">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="dns-prefetch" href="https://res.nie.netease.com">
+    <link rel="shortcut icon" href="./96.ico"/>
     <script>var myDataChannel="pcFab";</script>
     <script type="text/javascript" id="jump" pub-name="双端跳转">!function(){function e(e,o){var n=new RegExp("(?:&|/?)"+o+"=([^&$]+)").exec(e);return n?n[1]:""}1==/iphone|android|ipod/i.test(navigator.userAgent.toLowerCase())&&"mobile"!=e(location.search,"from")&&(location.href="//hyj.163.com/m/fab/")}(),myDataChannel="pcFab";</script><!--ignore-->
     <link rel="stylesheet" href="css/alertBox.css">
