--- a/hezuo.html
+++ b/hezuo.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>商务合作</title>
+    <link rel="shortcut icon" href="./images/ds.ico"/>
     <style>
         /* body {
             background-color: #f0f0f0;
