--- a/hjts.html
+++ b/hjts.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    
+    <link rel="shortcut icon" href="./96.ico"/>
 
 
 <!--This is Git Project From HYJ/hyj-gw-pc-32830-20190806(12727)-->
