--- a/wyds.html
+++ b/wyds.html
@@ -2,8 +2,10 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./images/ds.ico"/>
     <title>首页</title>
     <style>
         * {
