--- a/dszm.html
+++ b/dszm.html
@@ -7,302 +7,9 @@
     <title>大神招募</title>
     <link rel="shortcut icon" href="./images/ds.ico"/>
     <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/dszm.css">
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-               /* 头部 */
-               * {
-            margin: 0;
-            padding: 0;
-        }
-
-        nav {
-            text-align: center;
-            height: 60px;
-            overflow: hidden;
-            background-color: #fff;
-        }
-
-        nav img {
-            width: 49px;
-            height: 49px;
-            margin-right: 111px;
-            position: relative;
-            top: 5px;
-        }
-
-        nav a {
-            position: relative;
-            top: -14px;
-            display: inline-block;
-            line-height: 60px;
-            text-decoration: none;
-            font-size: 18px;
-            margin-left: 104px;
-            color: #333;
-        }
-
-        nav .aa {
-            position: relative;
-            top: -14px;
-            display: inline-block;
-            width: 100px;
-            height: 60px;
-            line-height: 60px;
-            color: #e9545f;
-            border-bottom: 4px solid #e9545f;
-            box-sizing: border-box;
-            text-decoration: none;
-            font-size: 18px;
-        }
-
-        nav a:hover {
-            color: #e9545f;
-        }
-
-
-
-
-        .box-1 {
-            padding: 50px 0 80px;
-            height: 777px;
-            color: #333;
-            font-size: 16px;
-        }
-
-        .box-1 h2 {
-            background-image: url(https://g.166.net/static/business/ds/img/00373ef.png);
-            background-position: -545px -44px;
-            width: 594px;
-            height: 44px;
-            margin: 0 auto 52px;
-        }
-
-        .box-1 .bj {
-            max-width: 1424px;
-            padding: 54px 0 40px;
-            margin: auto;
-            font-size: 0;
-            background: url(https://g.166.net/static/business/ds/img/2377dc4.jpg) top no-repeat;
-            background-size: contain;
-            height: 490px;
-        }
-
-        .box-2 {
-            height: 963px;
-            padding-top: 105px;
-            background: #f6f6f6 url(https://g.166.net/static/business/ds/img/be074bd.jpg) center 100px no-repeat;
-            background-size: 1605px 850px;
-        }
-
-        .box-2 h2 {
-            background-image: url(https://g.166.net/static/business/ds/img/00373ef.png);
-            background-position: -545px -88px;
-            width: 334px;
-            height: 43px;
-            margin: 0 auto 45px;
-        }
-
-
-
-                /* 底部 */
-                .dao-er {
-            position: relative;
-            margin: auto;
-            min-width: 1200px;
-            color: #fff;
-            text-align: center;
-            background: #272a2c;
-            border-bottom: 1px solid hsla(0, 0%, 77.3%, .3);
-            height: 187px;
-        }
-
-        .dao-er .daoer {
-            width: 1545px;
-            height: 186px;
-            padding: 30px 0 26px;
-            margin: 0 auto;
-            box-sizing: border-box;
-        }
-
-        .dao-er .daoer .left {
-            float: left;
-            width: 540px;
-            height: 130px;
-        }
-
-        .dao-er .daoer .logo {
-
-            float: left;
-            width: 214px;
-            height: 60px;
-            overflow: hidden;
-            margin-top: 35px;
-            overflow: hidden;
-        }
-
-        .dao-er .daoer .logo img {
-            float: left;
-            width: 60px;
-            height: 60px;
-        }
-
-        .dao-er .logo span {
-            font-size: 24px;
-            font-weight: 600;
-            color: #fff;
-            margin-bottom: 12px;
-        }
-
-        .in-right {
-            float: right;
-            /* display: inline-block; */
-            width: 326px;
-            height: 130px;
-        }
-
-        .in-right img {
-            float: left;
-            width: 130px;
-            height: 130px;
-        }
-
-        .in-right .xia-zai {
-            float: right;
-            width: 186px;
-            height: 130px;
-            box-sizing: border-box;
-        }
-
-        .in-right .a1 {
-            display: inline-block;
-            width: 100%;
-            height: 60px;
-            margin-bottom: 12px;
-            background-image: url(./images/wyds/xz.png);
-            background-position: 500px -442px;
-        }
-
-        .in-right .a1:hover {
-            background-position: 0 60px;
-        }
-
-        .in-right .a2 {
-            display: inline-block;
-            width: 100%;
-            height: 60px;
-            background-image: url(./images/wyds/xz.png);
-            background-position: 0 120px;
-        }
-
-        .in-right .a2:hover {
-            background-position: 496px -830px;
-        }
-
-        .dao-er .right {
-            margin-top: 18px;
-            width: 846px;
-            height: 96px;
-            color: #fff;
-            float: right;
-            border-left: 1px solid;
-            border-left: 1px solid hsla(0, 0%, 77.3%, .3);
-            padding-left: 85px;
-        }
-
-        /* 写代码时，只有上帝和我知道这是干啥，现在只有上帝知道 */
-
-        .dao-er .right p {
-            font-size: 18px;
-            margin-bottom: 20px;
-            text-align: left;
-        }
-
-        .dao-er .bj {
-            width: 760px;
-            height: 56px;
-            text-align: left;
-        }
-
-        .dao-er em {
-            font-style: normal;
-            display: inline-block;
-            font-size: 14px;
-            color: #fff;
-            width: 84px;
-            margin: 0 55px 12px 0;
-        }
-
-        .di-bu {
-            background: #272a2c;
-            color: #fff;
-            height: 142px;
-            box-sizing: border-box;
-            display: block;
-            text-align: center;
-        }
-
-        .di-bu .box {
-            min-width: 840px;
-            display: inline-block;
-            text-align: left;
-            padding: 10px 0;
-            font-size: 12px;
-            line-height: 20px;
-            height: 102px;
-        }
-
-        .di-bu .box .top {
-            width: 840px;
-            margin-bottom: 20px;
-            height: 48px;
-            margin-top: 20px;
-        }
-
-        .di-bu .top .left {
-            float: left;
-            width: 271px;
-            height: 38px;
-        }
-
-        .di-bu .top .right {
-            float: left;
-            width: 529px;
-            height: 48px;
-        }
-
-        .di-bu .top .right a {
-            display: inline-block;
-            background-color: #610000;
-            z-index: 2;
-            right: 0;
-            height: 26px;
-            line-height: 26px;
-            padding: 0 3px;
-            text-decoration: none;
-            top: 22px;
-            margin-top: 2px;
-            margin-left: 192px;
-            color: #fff;
-        }
-
-        .di-bu .box .bottom a {
-            text-decoration: none;
-            color: #fff;
-        }
-
-        .aaa {
-            margin-left: calc(50% - 440px);
-            width: 960px;
-            height: 1031px;
-            margin-top: 30px;
-            margin-bottom: 30px;
-            border: 1px solid #fff;
-            border-radius: 30px;
-        }
+       
     </style>
 </head>
 
@@ -310,11 +17,11 @@
     <!-- 通用顶部 -->
     <nav>
         <img src="./images/wyds/logo.png" alt="">
-        <a href="" class="aa">首页</a>
+        <a href="./wyds.html" class="aa">首页</a>
         <a href="">内容精选</a>
-        <a href="">大神招募</a>
+        <a href="####">大神招募</a>
         <a href="">最新资讯</a>
-        <a href="">商务合作</a>
+        <a href="hezuo.html">商务合作</a>
         <a href="">关注我们
             <section>
 
