--- a/wyds.html
+++ b/wyds.html
@@ -6,339 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/ds.ico"/>
+    <link rel="stylesheet" href="./css/wyds.css">
     <title>首页</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        nav {
-            text-align: center;
-            height: 60px;
-            overflow: hidden;
-        }
-
-        nav img {
-            width: 49px;
-            height: 49px;
-            margin-right: 111px;
-            position: relative;
-            top: 5px;
-        }
-
-        nav a {
-            position: relative;
-            top: -14px;
-            display: inline-block;
-            line-height: 60px;
-            text-decoration: none;
-            font-size: 18px;
-            margin-left: 104px;
-            color: #333;
-        }
-
-        nav .aa {
-            position: relative;
-            top: -14px;
-            display: inline-block;
-            width: 100px;
-            height: 60px;
-            line-height: 60px;
-            color: #e9545f;
-            border-bottom: 4px solid #e9545f;
-            box-sizing: border-box;
-            text-decoration: none;
-            font-size: 18px;
-        }
-
-        nav a:hover {
-            color: #e9545f;
-        }
-
-
-        /* 大背景 */
-        .dbj {
-            padding-top: 500px;
-            height: 1078px;
-            background: url(././images/wyds/01.jpg) top no-repeat;
-            background-size: auto;
-        }
-
-        .dbj .xz {
-            height: 113px;
-            /* background-color: aquamarine; */
-        }
-
-        .dbj .ers {
-            position: relative;
-        }
-
-        .dbj .xz .a1 {
-            position: absolute;
-            top: 0;
-            left: 50%;
-            background-image: url(./images/wyds/xz.png);
-
-            width: 139px;
-            height: 55px;
-            display: inline-block;
-            background-position: 312px -443px;
-        }
-
-        .a1:hover {
-            /* background-position: 312px 121px;
-        background-position: 312px -384px; */
-        }
-
-        .dbj .xz .a2 {
-            position: absolute;
-            top: 58px;
-            left: 50%;
-            background-image: url(./images/wyds/xz.png);
-            background-position: 140px -110px;
-            width: 139px;
-            height: 55px;
-            display: inline-block;
-        }
-
-        .a2:hover {
-            background-position: 143 0;
-        }
-
-
-        .two {
-            margin-top: 1250px;
-            content: "";
-            width: 100%;
-            height: 1155px;
-            position: absolute;
-            top: -107px;
-            background: url(https://g.166.net/static/business/ds/img/1cddd61.png) top no-repeat;
-            background-size: auto 100%;
-            pointer-events: none;
-        }
-
-
-
-
-
-
-
-
-
-
-
-
-        .san {
-            margin-top: 660px;
-            height: 1333px;
-            padding-top: 120px;
-            background: url(https://g.166.net/static/business/ds/img/3205f85.jpg) top no-repeat;
-            background-size: auto 100%;
-        }
-
-        .si {
-            height: 1081px;
-            padding-top: 103px;
-            background: url(https://g.166.net/static/business/ds/img/941c6c5.jpg) top no-repeat;
-            background-size: auto 100%;
-        }
-
-        .wu {
-            height: 1080px;
-            padding-top: 107px;
-            background: url(https://g.166.net/static/business/ds/img/475d6b8.jpg) top no-repeat;
-            background-size: auto 100%;
-        }
-
-
-
-        .dao-er {
-            position: relative;
-            margin: auto;
-            min-width: 1200px;
-            color: #fff;
-            text-align: center;
-            background: #272a2c;
-            border-bottom: 1px solid hsla(0, 0%, 77.3%, .3);
-            height: 187px;
-        }
-
-        .dao-er .daoer {
-            width: 1545px;
-            height: 186px;
-            padding: 30px 0 26px;
-            margin: 0 auto;
-            box-sizing: border-box;
-        }
-
-        .dao-er .daoer .left {
-            float: left;
-            width: 540px;
-            height: 130px;
-        }
-
-        .dao-er .daoer .logo {
-
-            float: left;
-            width: 214px;
-            height: 60px;
-            overflow: hidden;
-            margin-top: 35px;
-            overflow: hidden;
-        }
-
-        .dao-er .daoer .logo img {
-            float: left;
-            width: 60px;
-            height: 60px;
-        }
-
-        .dao-er .logo span {
-            font-size: 24px;
-            font-weight: 600;
-            color: #fff;
-            margin-bottom: 12px;
-        }
-
-        .in-right {
-            float: right;
-            /* display: inline-block; */
-            width: 326px;
-            height: 130px;
-        }
-
-        .in-right img {
-            float: left;
-            width: 130px;
-            height: 130px;
-        }
-
-        .in-right .xia-zai {
-            float: right;
-            width: 186px;
-            height: 130px;
-            box-sizing: border-box;
-        }
-
-        .in-right .a1 {
-            display: inline-block;
-            width: 100%;
-            height: 60px;
-            margin-bottom: 12px;
-            background-image: url(./images/wyds/xz.png);
-            background-position: 500px -442px;
-        }
-
-        .in-right .a1:hover {
-            background-position: 0 60px;
-        }
-
-        .in-right .a2 {
-            display: inline-block;
-            width: 100%;
-            height: 60px;
-            background-image: url(./images/wyds/xz.png);
-            background-position: 0 120px;
-        }
-
-        .in-right .a2:hover {
-            background-position: 496px -830px;
-        }
-
-        .dao-er .right {
-            margin-top: 18px;
-            width: 846px;
-            height: 96px;
-            color: #fff;
-            float: right;
-            border-left: 1px solid;
-            border-left: 1px solid hsla(0, 0%, 77.3%, .3);
-            padding-left: 85px;
-        }
-
-        /* 写代码时，只有上帝和我知道这是干啥，现在只有上帝知道 */
-
-        .dao-er .right p {
-            font-size: 18px;
-            margin-bottom: 20px;
-            text-align: left;
-        }
-
-        .dao-er .bj {
-            width: 760px;
-            height: 56px;
-            text-align: left;
-        }
-
-        .dao-er em {
-            font-style: normal;
-            display: inline-block;
-            font-size: 14px;
-            color: #fff;
-            width: 84px;
-            margin: 0 55px 12px 0;
-        }
-
-        .di-bu {
-            background: #272a2c;
-            color: #fff;
-            height: 142px;
-            box-sizing: border-box;
-            display: block;
-            text-align: center;
-        }
-
-        .di-bu .box {
-            min-width: 840px;
-            display: inline-block;
-            text-align: left;
-            padding: 10px 0;
-            font-size: 12px;
-            line-height: 20px;
-            height: 102px;
-        }
-
-        .di-bu .box .top {
-            width: 840px;
-            margin-bottom: 20px;
-            height: 48px;
-            margin-top: 20px;
-        }
-
-        .di-bu .top .left {
-            float: left;
-            width: 271px;
-            height: 38px;
-        }
-
-        .di-bu .top .right {
-            float: left;
-            width: 529px;
-            height: 48px;
-        }
-
-        .di-bu .top .right a {
-            display: inline-block;
-            background-color: #610000;
-            z-index: 2;
-            right: 0;
-            height: 26px;
-            line-height: 26px;
-            padding: 0 3px;
-            text-decoration: none;
-            top: 22px;
-            margin-top: 2px;
-            margin-left: 192px;
-            color: #fff;
-        }
-
-        .di-bu .box .bottom a{
-            text-decoration: none;
-            color: #fff;
-        }
-    </style>
+  
 </head>
 
 <body>
