--- a/wyds.html
+++ b/wyds.html
@@ -15,10 +15,7 @@
         <a href="dszm.html">大神招募</a>
         <a href="./qbzx.html">最新资讯</a>
         <a href="./hezuo.html">商务合作</a>
-        <a href="">关注我们
-            <section>
-            </section>
-        </a>
+        <a href="">关注我们</a>
     </nav>
     <div class="dbj">
         <section class="ers">
