--- a/wyds.html
+++ b/wyds.html
@@ -26,11 +26,16 @@
         </section>
     </div>
     <!-- 第二大框 -->
-    <div class="two"></div>
+    <div class="two">
+        <img src="./images/wyds/333.png" alt="">
+    </div>
     <!-- 第三块 -->
-    <div class="san"></div>
+    <div class="san">
+        <img src="./images/wyds/666.png" alt="">
+    </div>
     <!-- 第四 -->
     <div class="si">
+        <img src="./images/wyds/999.png" alt="">
     </div>
     <!-- 第五 -->
     <div class="wu">
